# HealthEndpointTest

./: Dockerfile  ReadMe.md  setup.cfg
health_endpoint_example/: config.py  main.py  models.py
health_endpoint_example/health_report/: health.json
health_endpoint_example/shared_services/: graphql.py  rabbitmq.py
health_endpoint_example/shared_services/utils/: retry.py
