[metadata]
name = health-endpoint-example
description = Microservice simulating interaction with rabbitMQ while exposing health data via http
long_description = file: README.md
author = "NSO / AURA"
author_email = "swiant@nso.edu"
license = TBD
url = http://dkist.nso.edu
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
setup_requires = setuptools_scm
packages = find:
include_package_data = True
install_requires =
  loguru==0.2.5
  pika==1.0.1
  consulate==0.6.0
  requests==2.22.0
  pydantic==0.26
  decorator==4.4.0
  pytest==5.0.1



[flake8]
max-line-length = 120
ignore = I100,I101,I102,I103,I104,I201

[pycodestyle]
max-line-length = 120
